feat(bg): change background

--- a/_config.vivia.yml
+++ b/_config.vivia.yml
@@ -14,7 +14,7 @@ favicon:                   # Path to the custom favicon relative to /source (e.g
 # Banner
 banner:
   enable: true                  # Display banner
-  url: https://static.lingxh.net/img/PixPin_2024-01-08_17-29-17.png                          # Path to the banner image relative to /source. Web url is also supported
+  url: https://souiken.moe/img/background.webp                          # Path to the banner image relative to /source. Web url is also supported
   position: center               # Specifies the alignment of the image, see the "object-position" property in CSS
   onAllPages: true               # Display banner on all pages instead of only the home page
 
