--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "7.1.1"
+    "version": "7.2.0"
   },
   "dependencies": {
     "colorjs.io": "^0.4.5",
@@ -32,6 +32,7 @@
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-regexp": "^0.4.0",
     "markdown-it-task-checkbox": "^1.0.6",
+    "mathjax-mhchem": "^3.3.2",
     "stylus": "^0.62.0"
   }
 }
